src/test/ui/transmute/transmute-type-parameters.stderr
error[E0512]: transmute called with types of different sizes
  --> $DIR/transmute-type-parameters.rs:6:18
   |
LL |     let _: i32 = transmute(x);
   |                  ^^^^^^^^^
   |
   = note: source type: T (this type's size can vary)
   = note: target type: i32 (32 bits)

error[E0512]: transmute called with types of different sizes
  --> $DIR/transmute-type-parameters.rs:11:18
   |
LL |     let _: i32 = transmute(x);
   |                  ^^^^^^^^^
   |
   = note: source type: (T, i32) (size can vary because of T)
   = note: target type: i32 (32 bits)

error[E0512]: transmute called with types of different sizes
  --> $DIR/transmute-type-parameters.rs:16:18
   |
LL |     let _: i32 = transmute(x);
   |                  ^^^^^^^^^
   |
   = note: source type: [T; 10] (size can vary because of T)
   = note: target type: i32 (32 bits)

error[E0512]: transmute called with types of different sizes
  --> $DIR/transmute-type-parameters.rs:25:18
   |
LL |     let _: i32 = transmute(x);
   |                  ^^^^^^^^^
   |
   = note: source type: Bad<T> (size can vary because of T)
   = note: target type: i32 (32 bits)

error[E0512]: transmute called with types of different sizes
  --> $DIR/transmute-type-parameters.rs:35:18
   |
LL |     let _: i32 = transmute(x);
   |                  ^^^^^^^^^
   |
   = note: source type: Worse<T> (size can vary because of T)
   = note: target type: i32 (32 bits)

error[E0512]: transmute called with types of different sizes
  --> $DIR/transmute-type-parameters.rs:40:18
   |
LL |     let _: i32 = transmute(x);
   |                  ^^^^^^^^^
   |
   = note: source type: std::option::Option<T> (size can vary because of T)
   = note: target type: i32 (32 bits)

error: aborting due to 6 previous errors

For more information about this error, try `rustc --explain E0512`.
